--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
+    "echarts": "^3.3.2",
     "element-ui": "^2.4.11",
     "vue": "^2.5.21",
     "vue-router": "^3.0.1",
@@ -19,8 +20,10 @@
     "@vue/cli-plugin-unit-jest": "^3.0.3",
     "@vue/cli-service": "^3.0.3",
     "@vue/test-utils": "^1.0.0-beta.20",
+    "axios-mock-adapter": "^1.7.1",
     "babel-core": "7.0.0-bridge.0",
     "babel-jest": "^23.6.0",
+    "mockjs": "^1.0.1-beta3",
     "stylus": "^0.54.5",
     "stylus-loader": "^3.0.2",
     "vue-template-compiler": "^2.5.21"
