--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "echarts": "^3.3.2",
     "element-ui": "^2.4.11",
     "vue": "^2.5.21",
+    "font-awesome": "^4.7.0",
     "vue-router": "^3.0.1",
     "vuex": "^3.0.1"
   },
