--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "echarts": "^3.8.5",
     "element-ui": "^2.4.11",
     "font-awesome": "^4.7.0",
+    "js-cookie": "^2.2.0",
     "v-charts": "^1.19.0",
     "vue": "^2.5.21",
+    "vue-i18n": "^8.10.0",
     "vue-router": "^3.0.1",
     "vuex": "^3.0.1"
   },
