--- a/package.json
+++ b/package.json
@@ -17,10 +17,12 @@
     "js-cookie": "^2.2.0",
     "oidc-client": "^1.4.1",
     "v-charts": "^1.19.0",
+    "v-viewer": "^1.5.1",
     "vue": "^2.5.21",
     "vue-i18n": "^8.10.0",
-    "vue-router": "^3.0.1",
+    "vue-photo-preview": "^1.1.3",
     "vue-quill-editor": "^3.0.6",
+    "vue-router": "^3.0.1",
     "vuex": "^3.0.1"
   },
   "devDependencies": {
