--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "js-cookie": "^2.2.0",
     "oidc-client": "^1.4.1",
     "v-charts": "^1.19.0",
+    "vcrontab": "^0.3.5",
     "vue": "^2.5.21",
     "vue-i18n": "^8.10.0",
     "vue-quill-editor": "^3.0.6",
